--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -35,7 +35,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="passwordInput">Contraseña</label>
-	    <input type="password" th:field="*{password}" class="form-control" id="passwordInput" required="true"/>
+	    <input type="password" th:field="*{password.password}" class="form-control" id="passwordInput" required="true"/>
 	  </div>
 	  <div class="form-group">
 	    <label for="passwordInput2">Repita la contraseña</label>
